# dbshell

./: README.md  main.py  pyproject.toml
src/dbshell/: __init__.py  explorer.py  suggestion_provider.py
src/dbshell/database/: __init__.py  base.py  factory.py  mysql_adapter.py  sqlite_adapter.py
